"Final Commit -Finished Project"

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="main-container">
-        <header>
-            <h1>Technical Docs</h1>
-            <nav id="nav-bar">
-                <h3>Topics :</h3>
+        <nav id="navbar">
+            <header><h1>QUEUE DOCUMENTATION :</h1></header>
+            <div id="links">
                 <a href="#introduction_to_queues" class="nav-link">Introduction to Queues</a>
                 <a href="#operations_on_queue" class="nav-link">Operations on Queue</a>
                 <a href="#array_implementation_of_queue" class="nav-link">Array implementation Of Queue</a>
                 <a href="#applications_of_queue" class="nav-link">Applications of Queue</a>
                 <a href="#queue_in_c++_stl" class="nav-link">Queue in C++ STL</a>
                 <a href="#problems" class="nav-link">Problems</a>
-            </nav>
-        </header>
+            </div>
+        </nav>
         <main id="main-doc">
 
             <section class="main-section" id="introduction_to_queues">
@@ -314,8 +314,8 @@
                 }<br>
             </code>
             </section>
-            
         </main>
     </div>
+
 </body>
 </html>
